# cowrie

./:  .gitignore  .coverage  .dockerignore  .flake8  .gitattributes  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .pyre_configuration  .readthedocs.yml  .travis.yml  .yamllint.yml  CHANGELOG  CHANGELOG.md  CHANGELOG.rst  CICD_REVIEW.md  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.txt  COWRIE_ARCHITECTURE.md  COWRIE_QUICK_REFERENCE.md  Dockerfile  Dockerfile.python2  DummyFile.txt  INSTALL.md  INSTALL.rst  IntegrationTests.Dockerfile  LICENSE.rst  LIEDTEKST.txt  MANIFEST.in  Makefile  README  README.md  README.rst  REUSE.toml  SECURITY_REVIEW.md  TODO.md  Vagrantfile  codecov.yml  config.py  (+29 more)
.circleci/: config.yml
.github/: FUNDING.yml  SECURITY.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  setup_help.md
.github/workflows/: docker-publish.yml  docker.yml  fingerprint.yml  hadolint.yml  linkedin-release.yml  pur.yml  pypi.yml  reuse.yml  security.yml  test-pypi.yml  tox.yml  weekly-release.yml
IntegrationTests/: Dockerfile  Readme.md  setup.cfg
IntegrationTests/FunctionalTests/: CommandsTest.py  DockerContainerTest.py  SshTest.py
IntegrationTests/Helpers/: DockerHelper.py
LICENSES/: LicenseRef-FoxIO-1.1.txt
app/: MANIFEST.in  requirements-output.txt  setup.py
app/data/: userdb.txt
app/etc/: cowrie.cfg.dist
commands/: __init__.py  base.py  dice.py  ls.py  ping.py  ssh.py  tar.py  wget.py
core/: Kippo.py  cmdl.py  fstypes.py  honeypot.py  ttylog.py
cowrie/: cowrie.cfg.dist
cowrie/commands/: __init__.py  adduser.py  apt.py  base.py  base64.py  busybox.py  cat.py  curl.py  dd.py  dice.py  env.py  ethtool.py  free.py  fs.py  ftpget.py  gcc.py  ifconfig.py  iptables.py  last.py  ls.py  malware.py  nc.py  netstat.py  nohup.py  perl.py  ping.py  python.py  scp.py  service.py  sleep.py  ssh.py  sudo.py  tar.py  tftp.py  ulimit.py  uname.py  uptime.py  wget.py  which.py
cowrie/core/: StdOutStdErrEmulationProtocol.py  artifact.py  auth.py  avatar.py  cef.py  checkers.py  config.py  connection.py  credentials.py  customparser.py  dblog.py  exceptions.py  fs.py  honeypot.py  interact.py  keys.py  output.py  passwd.py  protocol.py  pwd.py  realm.py  server.py  session.py  shlex.py  ssh.py  sshserver.py  transport.py  ttylog.py  userauth.py  utils.py
cowrie/dblog/: hpfeeds.py  mysql.py  slack.py  textlog.py  xmpp.py
cowrie/insults/: insults.py
cowrie/output/: README.md  csirtg.py  cuckoo.py  dshield.py  elasticsearch.py  hpfeeds.py  hpfeeds3.py  influx.py  jsonlog.py  kafka.py  localsyslog.py  malshare.py  mongodb.py  mysql.py  redis.py  rethinkdblog.py  s3.py  slack.py  socketlog.py  splunk.py  splunkhec.py  splunklegacy.py  sqlite.py  syslog.py  textlog.py  viper.py  virustotal.py  xmpp.py  zyre.py
cowrie/proxy/: avatar.py  endpoints.py  server.py  session.py
cowrie/python/: logfile.py
cowrie/shell/: avatar.py  command.py  customparser.py  filetransfer.py  fs.py  honeypot.py  process.py  protocol.py  pwd.py  server.py  session.py  shlex.py
cowrie/ssh/: channel.py  connection.py  factory.py  filetransfer.py  forwarding.py  keys.py  session.py  transport.py  userauth.py
cowrie/telnet/: session.py  transport.py
cowrie/test/: expected_results.json  fake_server.py  fake_transport.py  test_base_commands.py  test_echo.py  test_utils.py  unittests.cfg
cowrie/twisted_xmpp/: client.py  data_form.py  delay.py  generic.py  iwokkel.py  muc.py  subprotocols.py  xmppim.py
cowrie/unittests/: FakeServer.py  TestBaseCommands.py
data/: fs.pickle  netstat.established  netstat.listen  netstat.normal  passwords.txt  userdb.txt
data/arch/: bsd-mips-lsb  bsd-mips64-lsb  bsd-sparc-msb  bsd-x32-lsb  linux-alpha-lsb  linux-am33-lsb  linux-arc-msb  linux-arm-lsb  linux-arm-msb  linux-c6x-msb  linux-frv-msb  linux-hppa-msb  linux-hppa64-msb  linux-ia64-lsb  linux-mips-lsb  linux-powerpc64-lsb  linux-riscv64-lsb  linux-sh-msb  linux-tilegx-lsb  linux-tilegx64-lsb  linux-x64-lsb
doc/: README
doc/elk/: README.md  filebeat-cowrie.conf  logstash-cowrie.conf
doc/graylog/: README.md
doc/kippo-graph/: README.md
doc/splunk/: README.md
doc/sql/: README.md  mysql.sql  sqlite3.sql  update10.sql  update11.sql  update3.sql  update4.sql  update5.sql  update6.sql  update8.sql  update9.sql
doc/squid/: README.md  squid.conf
doc/supervisor/: cowrie.conf
doc/systemd/: README.md  cowrie.cfg  cowrie.cfg.dist  cowrie.service
docker/: .Dockerfile.swp  Dockerfile  Dockerfile_no_llm  docker-compose.yml
docker/flavors/: README.md
docs/: BACKEND_POOL.rst  CHANGELOG.rst  CONTRIBUTING.rst  EVENT_PIPELINE.rst  FAQ.rst  FTPGET_ASYNC_REWRITE_PLAN.md  HONEYFS.rst  INSTALL.rst  LICENSE.rst  LLM.rst  Makefile  OUTPUT.rst  PROXY.rst  README.rst  SNAPSHOTS.rst  conf.py  index.rst  p1  requirements.txt
docs/datadog/: README.rst
docs/docker/: README.rst
docs/elk/: README.md  README.rst  (+3 more)
etc/: .gitignore  cowrie.cfg  cowrie.cfg.dist  userdb.example  userdb.txt
integration-test/: test_DockerContainer.py  test_Ssh.py
notebooks/: Codegemma__commands.ipynb  Final_promptengg_llama3.ipynb  codegemma_current directory.ipynb  gen_synth_data.py  hf_basic_inference_phi3_small.py
routertrap/: .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  README.md  routertrap.toml.example
routertrap/routertrap/: Cargo.toml
routertrap/routertrap-common/: Cargo.toml
routertrap/routertrap-common/src/: lib.rs
routertrap/routertrap-ebpf/: Cargo.toml
routertrap/routertrap-ebpf/src/: main.rs
routertrap/routertrap/src/: config.rs  ebpf_manager.rs  main.rs
routertrap/routertrap/src/cli/: cisco.rs  juniper.rs  mod.rs  ssh.rs  telnet.rs
routertrap/routertrap/src/detection/: mod.rs
routertrap/routertrap/src/feed/: mod.rs
routertrap/routertrap/src/protocols/: amplification.rs  bgp.rs  dns.rs  memcached.rs  mod.rs  ntp.rs  snmp.rs  ssdp.rs
src/: ftplib_mod.py
utils/: asciinema.py  convert32.py  createfs.py  fsctl.py  kibana-kippo.conf  logstash-kippo.conf  passdb.py  playlog.py  report_email.py
y/: twistd.pid
(+547 files in other folders)
