[package]
name = "routertrap-ebpf"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
routertrap-common = { path = "../routertrap-common", default-features = false }

[[bin]]
name = "routertrap"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
